--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -8,6 +8,7 @@ const {
 <!DOCTYPE html>
 <html lang="en-AU">
     <head>
+        <base href={import.meta.env.BASE_URL} />
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content={description} />
