--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -12,7 +12,7 @@ const {
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content={description} />
-        <link rel="stylesheet" href="/styles/global.css" />
+        <link rel="stylesheet" href={`${import.meta.env.BASE_URL}styles/global.css`}>
         {canonical && <link rel="canonical" href={canonical} />}
         <title>{title}</title>
     </head>
