--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -19,13 +19,13 @@ const {
     <body>
         <header class="site-header">
             <div class="container header-inner">
-                <a class="logo" href="/">Shepparton Home Organising</a>
+                <a class="logo" href="">Shepparton Home Organising</a>
                 <nav class="nav">
-                    <a href="/services">Services</a>
-                    <a href="/service-areas">Service Areas</a>
-                    <a href="/before-after">Before & After</a>
-                    <a href="/about">About</a>
-                    <a class="btn" href="/contact">Book a free chat</a>
+                    <a href="services/">Services</a>
+                    <a href="service-areas/">Service Areas</a>
+                    <a href="before-after/">Before & After</a>
+                    <a href="about/">About</a>
+                    <a class="btn" href="contact/">Book a free chat</a>
                 </nav>
             </div>
         </header>
