fix home page, add carousel, fit clients needs

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -27,11 +27,17 @@ const {
   <body>
     <header class="site-header">
       <div class="container header-inner">
-        <a class="logo" href="">Shepparton Home Organising</a>
+        <a href="" class="logo">
+          <img
+            src={`${import.meta.env.BASE_URL}images/logo_transparent.png`}
+            alt="Shepparton Home Organising logo"
+            class="logo-img"
+          />
+        </a>
         <nav class="nav">
           <a href="services/">Services</a>
-          <a href="service-areas/">Service Areas</a>
-          <a href="before-after/">Before & After</a>
+          <a href="service-areas/">Services Offered</a>
+          <a href="before-after/">Design Ideas</a>
           <a href="about/">About</a>
           <a class="btn" href="contact/">Book a free chat</a>
         </nav>
