--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -32,11 +32,8 @@ import Base from "../layouts/Base.astro";
       <label>
         Which service are you after?
         <select name="service">
-          <option value="Decluttering">Home Decluttering</option>
-          <option value="Organising">Home Organising</option>
-          <option value="Downsizing">Downsizing Support</option>
-          <option value="Moving">Moving Preparation</option>
-          <option value="Styling">Home Styling</option>
+          <option value="NDIS Customized Support">NDIS Customized Support</option>
+          <option value="Personal Space Design">Personal Space Design</option>
           <option value="Other">Other / Not sure</option>
         </select>
       </label>
